# NLP-BE

./: .env  .gitignore  README.md  analyze_news.py  crawlers.py  database.py  interview.db  it_news_last_14_days.csv  it_news_last_14_days.json  it_news_with_content.csv  it_news_with_content.json  jobKorea_crawler_playwright.py  main.py  main_redis.py  pyproject.toml  rag_core.py  schemas.py
BOJ/: boj_crawling.py  flatten_tags.py
cover_letter/: cache.py  generator.py  loader.py
csInterview/: chroma_client.py  csInterviewApi.py  index_questions.py  random_service.py  topic_service.py
csInterview/chroma_db/: chroma.sqlite3
csInterview/csQuestion/: @OneToOne 연관관계에서 Lazy Loading을 설정할.txt  CSS 명시도(Specificity)에 대해서 설명해주세요..txt  Core Web Vitals란 무엇인가요.txt  Gradle에 대해 설명해 주세요..txt  HTTP2의 특징에 대해 설명해주세요..txt  HTTP의 ETag에 대해서 설명해주세요..txt  Infrastructure as Code(IaC)에 대해 설명해.txt  JPA Fetch Join과 페이징을 함께 사용할 때 주의점을.txt  JSON Schema에 대해 설명해주세요..txt  NoSQL 데이터베이스의 유형에는 어떤 것들이 있나요.txt  OSI 7계층에 대해서 설명해주세요..txt  PRG 패턴에 대해서 설명해 주세요..txt  RDB에서 페이징 쿼리의 필요성을 설명해 주세요..txt  Storybook을 알고 계신가요 Storybook이란 무엇인지.txt  String 객체는 가변일까요, 불변일까요 그렇게 생각하신 이유.txt  TCP 3-way handshake 과정에 대해서 설명해주세요..txt  ThreadLocal에 대해 설명해 주세요..txt  jsx란 무엇이며, 이는 자바스크립트에서 어떻게 변환되나요.txt  stale-while-revalidate에 대해 설명해주세요..txt  가상화에 대해 설명해 주세요..txt  객체 지향 프로그래밍이란 무엇이고, 어떤 특징이 있나요.txt  결합도와 응집도에 대해 설명해주세요..txt  관계형 데이터베이스와 비관계형 데이터베이스에 대해 설명해주세요..txt  낙관적 락과 비관적 락에 대해 설명해 주세요..txt  널 오브젝트 패턴이란 무엇인가요.txt  논리 삭제와 물리 삭제의 차이점은 무엇인가요.txt  동적 타입 언어와 정적 타입 언어에 대해 설명해주세요..txt  리액트에서 변수 관리 시 useRef를 사용하는 것은 let을.txt  멀티 쓰레딩에 대해서 설명해 주세요..txt  멀티 태스킹 시스템의 한계에 대해서 설명해주세요..txt  바에서 Object 타입인 value를 String으로 타입 캐.txt  서버리스란 무엇인가요.txt  스레드 풀 포화 정책이란 무엇인가요.txt  어떤 예외가 발생하면 트랜잭션을 롤백하나요.txt  열 기반 DB와 행 기반 DB의 차이점은 무엇인가요.txt  웹뷰(WebView)란 무엇인가요.txt  이진 트리에 대해서 설명해 주세요..txt  자바 프로그램이 실행되는 흐름을 설명해 주세요..txt  자바스크립트에서 메모리 누수가 발생하는 상황들을 설명해주세요..txt  (+10 more)
githubInterview/: context_builder.py  githubInterviewApi.py  github_client.py  question_generator.py  schemas.py  service.py  session_store.py
jobKorea/: create_vector_db.py  groq_processor.py  jobKorea_crawler_playwright.py
jobKorea_create_db/: create_vector_db.py  groq_processor.py  jobKorea_crawler_playwright.py  job_postings_final_qwen32b.json  job_postings_raw.json
naverNews/: clean_json.py  crawlers.py  create_news_chroma_db.py  it_news_cleaned.json  it_news_with_content.json
naverNews_create_db/: clean_json.py  crawlers.py  create_news_chroma_db.py  it_news_with_content.csv
routers/: agent_router.py  algorithm_router.py  cover_letter_router.py  cs_interview_router.py  github_interview_router.py  news_career_router.py
services/: tools.py
users/: crud.py  deps.py  models.py  schemas.py  security.py  userApi.py
(+62 files in other folders)
