[project]
name = "nlp-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.124.0",
    "groq>=1.0.0",
    "jinja2>=3.1.6",
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.6",
    "pillow>=12.0.0",
    "playwright>=1.57.0",
    "pydantic>=2.12.5",
    "pytesseract>=0.3.13",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.38.0",
]
