[project]
name = "nlp-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.95.2,<0.100.0",
    "pydantic>=1.10,<2.0",
    "chromadb==0.4.24",
    "sentence-transformers>=5.1.2",
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.124.0",
    "langchain>=1.1.3",
    "langchain-openai>=1.1.1",
    "matplotlib>=3.10.8",
    "pdfplumber>=0.11.8",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "redis>=7.1.0",
    "streamlit>=1.52.1",
    "groq>=1.0.0",
    "jinja2>=3.1.6",
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.6",
    "pillow>=12.0.0",
    "playwright>=1.57.0",
    "pydantic>=2.12.5",
    "pytesseract>=0.3.13",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.38.0",
    "numpy<2.0.0",
    "openai>=2.13.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=1.4",
    "passlib[bcrypt]>=1.7",
    "PyJWT>=2.0",
    "sqlalchemy-orm>=1.2.10",
]

[tool.poetry.dev-dependencies]

